--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,1 +1,12 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge add Firefox */
+.scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none; /* Firefox */
+}
